# paddle-to-onnx

./: .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  README_en.md  Taskfile.yaml  poly.toml  pyproject.toml  setup.py
.ai-rulez/: .generated-manifest.json  config.toml  config.yaml
.github/ISSUE_TEMPLATE/: en_issue.md  zn_issue.md
.github/workflows/: build_and_test.yml  code_style_check.yml  export_models.yml  release_linux_aarch64.yml  release_linux_x86_64.yml  release_mac.yml  release_win_amd64.yml  validate-issues.yml  validate-pr.yml
.github/workflows/scripts/: download_protobuf.sh  entrypoint.sh
cmake/: patch_optimizer.cmake  utils.cmake
debug/: p2o_infer_debugger.py  prune_onnx_model.py
docs/en/: compile_local.md  model_zoo.md  op_list.md
docs/tech_walkthrough/: paddle2onnx_tech_walkthrough.ipynb
docs/zh/: compile_docker.md  compile_local.md  model_zoo.md
exports/: pp_doclayout_v3_reference.json
paddle2onnx/: __init__.py  command.py  convert.py  convert_to_fp16.py  converter.cc  converter.h  cpp2py_export.cc  mappers_registry.h.in  onnx_reader.cc  optimize.py  paddle_reader.cc  utils.py
paddle2onnx/mapper/: data_helper.h  exporter.cc  exporter.h  loop.cc  mapper.h  onnx_helper.cc  onnx_helper.h  quantize_helper.h  register_mapper.h  select_input.cc  while.cc
paddle2onnx/mapper/activation/: activation.cc  activation.h  cosh.cc  cosh.h  hard_shrink.cc  hard_shrink.h  hard_sigmoid.cc  hard_sigmoid.h  hard_swish.cc  hard_swish.h  hardtanh.cc  hardtanh.h  relu6.cc  relu6.h  sigmoid.cc  sigmoid.h  sign.cc  sign.h  sinh.cc  sinh.h  swish.cc  swish.h
paddle2onnx/mapper/debug/: print.cc  print.h
paddle2onnx/mapper/detection/: multiclass_nms.cc  multiclass_nms.h  roi_align.cc  roi_align.h  yolo_box.cc  yolo_box.h
paddle2onnx/mapper/nn/: affine_channel.cc  affine_channel.h  batch_norm.cc  batch_norm.h  conv2d.cc  conv2d.h  conv2d_transpose.cc  conv2d_transpose.h  conv3d.cc  conv3d.h  conv3d_transpose.cc  conv3d_transpose.h  data_norm.cc  data_norm.h  deform_conv2d.cc  deform_conv2d.h  dropout.cc  dropout.h  group_norm.cc  group_norm.h  instance_norm.cc  instance_norm.h  interpolate.cc  interpolate.h  layer_norm.cc  layer_norm.h  norm.cc  norm.h  pad.cc  pad.h  pad3d.cc  pad3d.h  pool2d.cc  pool2d.h  pool3d.cc  pool3d.h  rnn.cc  rnn.h  shape.cc  shape.h  (+4 more)
paddle2onnx/mapper/quantize/: base_quantize_processor.cc  base_quantize_processor.h  dequantize_linear.cc  dequantize_linear.h  ort_quantize_processor.cc  ort_quantize_processor.h  other_quantize_processor.cc  other_quantize_processor.h  quantize_linear.cc  quantize_linear.h  rknn_quantize_processor.cc  rknn_quantize_processor.h  tensorrt_quantize_processor.cc  tensorrt_quantize_processor.h
paddle2onnx/mapper/tensor/: abs.cc  abs.h  add_n.cc  add_n.h  argmax.cc  argmax.h  argmin.cc  argmin.h  argsort.cc  argsort.h  array_to_tensor.cc  array_to_tensor.h  assign.cc  assign.h  assign_out.cc  assign_out.h  assign_value.cc  assign_value.h  atan2.cc  atan2.h  bitwise.cc  bitwise.h  bmm.cc  bmm.h  builtin_combine.cc  builtin_combine.h  builtin_slice.cc  builtin_slice.h  builtin_split.cc  builtin_split.h  cast.cc  cast.h  clip.cc  clip.h  concat.cc  concat.h  cumsum.cc  cumsum.h  dist.cc  dist.h  (+180 more)
paddle2onnx/optimizer/: convert_fp32_to_fp16.cc  convert_fp32_to_fp16.h  eliminate_non_transpose.h  fuse_constant_cast.h  fuse_constant_reshape.h  fuse_constant_unsqueeze.h  fuse_paddle_conv_bias.h  fuse_unsqueeze_conv2d_squeeze.h  paddle2onnx_optimizer.cc  paddle2onnx_optimizer.h  replace_add_to_identity.h  replace_mul_to_identity.h
paddle2onnx/parser/: parser.cc  parser.h  pir_parser.cc  pir_parser.h  tensor_utils.cc  tensor_utils.h
paddle2onnx/proto/: CMakeLists.txt  p2o_paddle.proto
paddle2onnx/utils/: utils.h
patch/paddle/: interface_support.h
tests/: auto_scan_test.py  conftest.py  fake_quant.py  onnxbase.py  quantize_ops.py  run.bat  run.sh  test_Conv2D_Dropout.py  test_abs.py  test_acos.py  test_add.py  test_argmax.py  test_argmin.py  test_argsort.py  test_array_to_tensor.py  test_asin.py  test_assign.py  test_atan.py  test_auto_scan_argminmax.py  test_auto_scan_argsort.py  test_auto_scan_assign.py  test_auto_scan_atan2.py  test_auto_scan_avgpool.py  test_auto_scan_batch_norm.py  test_auto_scan_bmm.py  test_auto_scan_cast.py  test_auto_scan_clip.py  test_auto_scan_concat.py  test_auto_scan_conv2d.py  test_auto_scan_conv2d_transpose.py  test_auto_scan_conv3d.py  test_auto_scan_cumsum.py  test_auto_scan_dist.py  test_auto_scan_dot.py  test_auto_scan_dropout.py  test_auto_scan_elementwise_ops.py  test_auto_scan_elu.py  test_auto_scan_expand.py  test_auto_scan_expand_as.py  test_auto_scan_eye.py  (+235 more)
tests/detection_ops/: nms.py
tests/onnx/: base_expect.py  export_if.py
tools/: export_gliner_models.py  export_hf_models.py  manifest_hf_repo.py  upload_hf_models.py
tools/codestyle/: clang-tidy.py  clang_format.sh  copyright.py  cpplint_pre_commit.sh  pre_commit.sh
tools/onnx/: README.md  onnx_infer_shape.py  prune_onnx_model.py  rename_onnx_model.py
tools/paddle/: README.md  infer_paddle_model_shape.py  merge_params.py  prune_paddle_model.py
