[build-system]
build-backend = "setuptools.build_meta"
requires = ["cmake>=3.16", "paddlepaddle>=3.3,<4", "setuptools>=42", "setuptools-scm", "wheel"]

[project]
name = "paddle2onnx"
description = "Export PaddlePaddle to ONNX"
readme = "README.md"
license = { text = "Apache License v2.0" }
authors = [{ name = "paddle-infer", email = "paddle-infer@baidu.com" }]
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = ["version"]
dependencies = [
    "huggingface-hub>=1.7.1",
    "numpy>=2.2.6",
    "onnx>=1.20.1,<2",
    "onnxoptimizer>=0.3.13",
    "onnxruntime>=1.24.3",
    "paddlepaddle>=3.3,<4",
    "polygraphy>=0.49.20,<1",
    "pyyaml>=6",
]
scripts.paddle2onnx = "paddle2onnx.command:main"

[dependency-groups]
dev = ["pyrefly>=1.1.1", "pytest>=8,<9"]
test = ["hypothesis>=6,<7", "onnxruntime>=1.20,<2", "pytest>=8,<9"]

[tool.setuptools]
dynamic.version = { file = "VERSION_NUMBER" }
exclude-package-data."*" = ["*.h", "*.cc", "*.bak", "*.in"]
packages.find.include = ["paddle2onnx*"]

[tool.setuptools_scm]
write_to = "paddle2onnx/version.py"

[tool.pyrefly]
python-version = "3.10"
project-includes = ["paddle2onnx", "setup.py"]
# The C++ extension `paddle2onnx_cpp2py_export` is a compiled `.so` with no
# stubs, so the static checker cannot resolve it. Treat it as `Any`.
replace-imports-with-any = ["paddle2onnx.paddle2onnx_cpp2py_export"]

[tool.pytest]
ini_options.testpaths = ["tests"]
